Updated: Graphics, a lot; Added: Discord rich presence; Added: Inventory; Added: Item drops; Added: Inventory controls; NOTICE: SHARED LIBRARY FILES ARE NO LONGER INCLUDED IN THE REPOSITORY. PLEASE BUILD THEM YOURSELF;

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 export_presets.cfg
 .import/
 **/*.import
+discord_sdk/*.gdns
+discord_sdk/*.gdnlib
+discord_sdk/*.gd
+bin/linux-64/*.so
+bin/osx-64/*.dylib
+bin/windows-64/*.dll
